--- a/app/Resources/views/Curso/modal.html.twig
+++ b/app/Resources/views/Curso/modal.html.twig
@@ -10,7 +10,7 @@
          
 <h4>Agregar Tutor al curso para el periodo {{entity.periodo}}</h4><br>
 
-<form action="{{ path('oferta_tutor', { 'id': entity.id }) }}" method="get" {{ form_enctype(cedula_form) }}>
+<form action="{{ path('oferta_tutor', { 'id': entity.id }) }}" method="get" {{ form_start(cedula_form) }}>
     {{ form_label(cedula_form.cedula,  'Cédula del Tutor') }}
     {{ form_widget(cedula_form.cedula) }}    
     {{ form_errors(cedula_form.cedula) }}
