--- a/app/Resources/views/Curso/oferta.html.twig
+++ b/app/Resources/views/Curso/oferta.html.twig
@@ -10,7 +10,7 @@
 </div>
 <div class="editar" id="editar" style="visibility: hidden">
  <h4>Agregar Tutor al Curso</h4><br>
-<form action="{{ path('oferta_tutor', { 'id': entity.id }) }}" method="get" {{ form_enctype(cedula_form) }}>
+<form action="{{ path('oferta_tutor', { 'id': entity.id }) }}" method="get" {{ form_start(cedula_form) }}
     {{ form_label(cedula_form.cedula,  'Cédula del Tutor') }}
     {{ form_widget(cedula_form.cedula) }}    
     {{ form_errors(cedula_form.cedula) }}
