--- a/app/Resources/views/Curso/show.html.twig
+++ b/app/Resources/views/Curso/show.html.twig
@@ -6,10 +6,9 @@
             {'entity': entity}, {'cursooferta':cursooferta}
         ) }}
 
-
 Agregar Oferta al curso: {{entity.id}}
 <table class="table table-bordered table-striped hidden-mobile" style="width: 50%">
-<form action="{{ path('oferta_curso', { 'id': entity.id }) }}" method="get" {{ form_enctype(form) }}>
+<form action="{{ path('oferta_curso', { 'id': entity.id }) }}" method="get" {{ form_start(form) }}>
     <tr>
         <td>
              {{ form_label(form.cedula,  'Cédula del Director') }}
