--- a/src/Admin/MedBundle/Resources/views/Accionespm/new.html.twig
+++ b/src/Admin/MedBundle/Resources/views/Accionespm/new.html.twig
@@ -4,7 +4,7 @@
             <h4 class="modal-title">Agregar Acción</h4>
             </div>			<!-- /modal-header -->
             <div class="modal-body">          
-   <form  action="{{ path('accionespm_create') }}" method="post" {{ form_enctype(form) }}>
+   <form  action="{{ path('accionespm_create') }}" method="post" {{ form_start(form) }}>
    <table class="table table-bordered table-striped hidden-mobile">
    <input type="hidden" name="_method" value="POST" />
      {{ form_errors(form) }}
