--- a/src/Admin/MedBundle/Resources/views/Avalplang/edit.html.twig
+++ b/src/Admin/MedBundle/Resources/views/Avalplang/edit.html.twig
@@ -5,7 +5,7 @@
             <h4 class="modal-title">Aval Plan de Gestión</h4>
             </div>			<!-- /modal-header -->
             <div class="modal-body">          
-   <form  action="{{ path('avalplang_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
+   <form  action="{{ path('avalplang_update', { 'id': entity.id }) }}" method="post" {{ form_start(edit_form) }}>
    <table class="table table-bordered table-striped hidden-mobile">
    <input type="hidden" name="_method" value="PUT" />
      {{ form_errors(edit_form) }}
