--- a/src/Admin/MedBundle/Resources/views/Productividad/newproject.html.twig
+++ b/src/Admin/MedBundle/Resources/views/Productividad/newproject.html.twig
@@ -7,7 +7,7 @@
        
             </div>			<!-- /modal-header -->
             <div class="modal-body">          
-   <form action="{{ path('productividad_projectadd' ) }}" method="POST" {{ form_enctype(form) }}>
+   <form action="{{ path('productividad_projectadd' ) }}" method="POST" {{ form_start(form) }}>
    <table class="table table-bordered table-striped hidden-mobile">
    <input type="hidden" name="_method" value="POST" />
      {{ form_errors(form) }}
