--- a/src/Admin/UserBundle/Resources/views/Default/passmed.html.twig
+++ b/src/Admin/UserBundle/Resources/views/Default/passmed.html.twig
@@ -96,7 +96,7 @@
                             <div class="content">
                                 <div class="widget-body no-padding" id="bodyform">
 
-                                    <form method="POST" id="checkout-form" class="smart-form" novalidate="novalidate" method="POST" action="{{path('home_pass2')}}" {{ form_enctype(form) }}>
+                                    <form method="POST" id="checkout-form" class="smart-form" novalidate="novalidate" method="POST" action="{{path('home_pass2')}}" {{ form_start(form) }}>
 
                                         <div id="form_body">
                                             {% include 'AdminUserBundle:Default:passform.html.twig' with {'form': form} %}
