fix forms deprecate

--- a/app/Resources/views/Curso/edit.html.twig
+++ b/app/Resources/views/Curso/edit.html.twig
@@ -3,7 +3,7 @@
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times</button>
     <h4 class="modal-title">Editar Curso</h4>
    </div> 
-   <form  action="{{ path('curso_update', { 'id': entity.id }) }}" method="post" {{ form_start(edit_form) }}>
+   <form  action="{{ path('curso_update', { 'id': entity.id }) }}" method="post" {{ form_start(edit_form) }}
    <table class="table table-bordered table-striped hidden-mobile">
    <input type="hidden" name="_method" value="PUT" />
      {{ form_errors(edit_form) }}
