--- a/src/Admin/MedBundle/Resources/views/coevalPares/edit.html.twig
+++ b/src/Admin/MedBundle/Resources/views/coevalPares/edit.html.twig
@@ -18,7 +18,7 @@
         </td>
   </tr>
 </table>
-     <form action="{{ path('coevalpares_update', { 'id': entity.id }) }}" method="post" {{ form_start(edit_form) }}>
+     <form action="{{ path('coevalpares_update', { 'id': entity.id }) }}" method="post" {{ form_start(edit_form) }}
     <table class="table table-bordered table-striped hidden-mobile" style="width: 95%">
      <input type="hidden" name="_method" value="PUT"/>
      {{ form_errors(edit_form) }}
