--- a/src/Admin/MedBundle/Resources/views/coevalTutor/edit.html.twig
+++ b/src/Admin/MedBundle/Resources/views/coevalTutor/edit.html.twig
@@ -8,7 +8,7 @@
         <td></td>
     </tr>
 </table>
-     <form action="{{ path('coevaltutor_update', { 'id': coeval.tutor.id }) }}" method="post" {{ form_start(edit_form) }}>
+     <form action="{{ path('coevaltutor_update', { 'id': coeval.tutor.id }) }}" method="post" {{ form_start(edit_form) }}
 <table class="table table-bordered table-striped hidden-mobile" style="width: 95%">
      <input type="hidden" name="_method" value="PUT" />
      {{ form_errors(edit_form) }}
