--- a/app/Resources/views/Programa/edit.html.twig
+++ b/app/Resources/views/Programa/edit.html.twig
@@ -3,7 +3,7 @@
     <div class="modal-header">
     <h4 class="modal-title">Editar Programa</h4>
    </div> 
-   <form  action="{{ path('programa_update', { 'id': entity.id }) }}" method="post" {{ form_start(edit_form) }}>
+   <form  action="{{ path('programa_update', { 'id': entity.id }) }}" method="post" {{ form_start(edit_form) }}
    <table class="table table-bordered table-striped hidden-mobile">
    <input type="hidden" name="_method" value="PUT" />
      {{ form_errors(edit_form) }}
