--- a/src/Admin/MedBundle/Resources/views/Instrumento/edit.html.twig
+++ b/src/Admin/MedBundle/Resources/views/Instrumento/edit.html.twig
@@ -22,7 +22,7 @@
                 <div class="content">
                 <div class="widget-body no-padding" id="bodyform">
         <div class="form_error"></div>
-        <form method="POST" id="checkout-form" class="smart-form" novalidate="novalidate" method="POST" action="{{path('admin_instrumento_update', { 'id': entity.id })}}" {{ form_start(form) }}>
+        <form method="POST" id="checkout-form" class="smart-form" novalidate="novalidate" method="POST" action="{{path('admin_instrumento_update', { 'id': entity.id })}}" {{ form_start(form) }}
         <div id="form_body">
         {% include 'AdminMedBundle:Instrumento:form.html.twig' with {'form': form} %}
         </div>
