--- a/src/Admin/UserBundle/Resources/views/User/new.html.twig
+++ b/src/Admin/UserBundle/Resources/views/User/new.html.twig
@@ -3,7 +3,7 @@
 {% block body -%}
     <h1>User creation</h1>
 
-    <form action="{{ path('admin_user_create') }}" method="post" {{ form_start(form) }}>
+    <form action="{{ path('admin_user_create') }}" method="post" {{ form_start(form) }}
         {{ form_widget(form) }}
         <p>
             <button type="submit">Create</button>
