--- a/src/Admin/UserBundle/Resources/views/User/index.html.twig
+++ b/src/Admin/UserBundle/Resources/views/User/index.html.twig
@@ -2,29 +2,25 @@
 
 {% block body -%}
     <table class="table table-bordered table-striped" style="width: 550px">
-    <form action="{{ path('admon_user_buscarpor')}}" method="post" {{ form_start(buscar_form) }}
-        <input type="hidden" name="_method" value="PUT" /> 
+        {{ form_start(newform) }}
         <tr>
-            <td>Usuarios ({{entities|length}}) </td>    
-         <td>{{ form_widget(buscar_form.texto) }}</td>
-         <td>{{ form_widget(buscar_form.parametro) }}</td>
+            <td>Usuarios ({{entities|length}}) </td>
+         <td>{{ form_widget(newform.texto) }}</td>
+         <td>{{ form_widget(newform.parametro) }}</td>
          <td>
-        <p>
-            <button type="submit">Buscar</button>
-        </p> 
+             {{ form_end(newform) }}
          </td>
      </tr>
-     </form>
     </table>
 <!-- NEW WIDGET START -->
 						<article class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-				
-				
+
+
 							<!-- Widget ID (each widget will need unique ID)-->
 							<div class="jarviswidget jarviswidget-color-blueDark" id="wid-id-3" data-widget-editbutton="false">
 								<!-- widget options:
 								usage: <div class="jarviswidget" id="wid-id-0" data-widget-editbutton="false">
-				
+
 								data-widget-colorbutton="false"
 								data-widget-editbutton="false"
 								data-widget-togglebutton="false"
@@ -33,28 +29,28 @@
 								data-widget-custombutton="false"
 								data-widget-collapsed="true"
 								data-widget-sortable="false"
-				
+
 								-->
 								<header>
 									<span class="widget-icon"> <i class="fa fa-table"></i> </span>
 									<h2>Exportar a PDF / Excel</h2>
-				
+
 								</header>
-				
+
 								<!-- widget div-->
 								<div>
-				
+
 									<!-- widget edit box -->
 									<div class="jarviswidget-editbox">
 										<!-- This area used as dropdown edit box -->
-				
+
 									</div>
 									<!-- end widget edit box -->
-				
+
 									<!-- widget content -->
 									<div class="widget-body no-padding">
 										<div class="widget-body-toolbar">
-				
+
 										</div>
 				<table id="datatable_tabletools" class="table table-striped table-hover">
                                     <thead>
@@ -83,7 +79,7 @@
         {% endfor %}
         </tbody>
     </table>
-{% if is_granted('ROLE_ADMIN') %}  
+{% if is_granted('ROLE_ADMIN') %}
         <ul>
         <li>
             <a href="{{ path('admin_user_new') }}">
