--- a/app/Resources/views/Programa/addlider.html.twig
+++ b/app/Resources/views/Programa/addlider.html.twig
@@ -63,7 +63,7 @@
                 <td>{{ entity.vinculacion }}</td>
                 <td>{{ entity.centro.nombre }}</td>
                 <td>
-                    <a href="" onClick='return select_item({{ entity.id }})'>Selecionar</a>
+                    <a href="" onClick='return select_item({{ entity.id }})'>Seleccionar</a>
                 </td>
             </tr>
         {% endfor %}
@@ -86,6 +86,5 @@ top.close();
 return false;
 }
 </script>
-                     
-                        
+
 {% endblock %}
