--- a/app/Resources/views/Programa/edit.html.twig
+++ b/app/Resources/views/Programa/edit.html.twig
@@ -22,7 +22,7 @@
    <tr>
     <td>Lider</td>
     <td>{{ form_widget(edit_form.lider) }}
-    <input type=button onClick='targetitem = document.forms[0].admin_unadbundle_programa_lider; 
+    <input type=button onClick='targetitem = document.forms[0].programa_lider;
 dataitem = window.open("{{ path('programa_addlider') }}",
 "dataitem", "toolbar=no,menubar=no,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=1100,height=510,left = 100,top = 100"); dataitem.targetitem = targetitem' 
 value="Selecionar Lider">
