--- a/src/Admin/MedBundle/Resources/views/Plangestion/show.html.twig
+++ b/src/Admin/MedBundle/Resources/views/Plangestion/show.html.twig
@@ -105,13 +105,13 @@
                                 <button class="close" data-dismiss="alert">×</button>
                                 <i class="fa-fw fa fa-times"></i>
                                 <strong>Importante!</strong> No a finalizado su autoevaluación. Registre su
-                                auoevaluación por cada actividad y luego oprima el boton "Cerrar Autoevaluación".
+                                auto evaluación por cada actividad y luego oprima el boton "Cerrar Autoevaluación".
                             </div>
                             {% endif %}
                         {% else %}
                             <a data-toggle="modal" href="{{ path('plangestion_abrir', { 'id': entity.id }) }}"
                                data-target="#myModal" class="btn btn-labeled btn-success"><span class="btn-label"><i
-                                            class="glyphicon glyphicon-thumbs-up"></i></span>Reabrir Autoevaluación</a>
+                                            class="glyphicon glyphicon-thumbs-up"></i></span>Editar Autoevaluación</a>
                             {% endif %}
                     </td>
                 </tr>
