--- a/src/Admin/UnadBundle/Resources/views/Docente/show.html.twig
+++ b/src/Admin/UnadBundle/Resources/views/Docente/show.html.twig
@@ -32,7 +32,7 @@
                         {% if instrumentos[0].estado %}
                             <a href="{{ path('plangestion_crear') }}" class="btn btn-primary btn-xs">Ingresar <i
                                         class="fa fa-sign-in"></i></a>
-                        {% else %}<i>Del 28 de julio al 13 de agosto</i>{% endif %}
+                        {% else %}<i>Del 2 al 13 de agosto</i>{% endif %}
                     {% endif %}
                 </td>
                 <td>
@@ -77,7 +77,7 @@
                         {% if instrumentos[1].estado %}
                             <a href="{{ path('plangestion_show', { 'id': entity.plangestion.id }) }}"
                                class="btn btn-primary btn-xs">Ingresar <i class="fa fa-sign-in"></i></a>
-                        {% else %}<i>Del 28 de julio al 13 de agosto</i>{% endif %}
+                        {% else %}<i>Del 2 al 13 de agosto</i>{% endif %}
                     {% endif %}
                 </td>
                 <td>
@@ -98,7 +98,7 @@
                         {% if instrumentos[1].estado %}
                             <a href="{{ path('plangestion_conf', { 'id': entity.id }) }}"
                                class="btn btn-primary btn-xs">Ingresar <i class="fa fa-sign-in"></i></a>
-                        {% else %}<i>Del 28 de julio al 13 de agosto</i>{% endif %}
+                        {% else %}<i>Del 2 al 13 de agosto</i>{% endif %}
                 </td>
 
             </tr>
