fix boton cerrar auto reverse

--- a/src/Admin/MedBundle/Resources/views/Plangestion/show.html.twig
+++ b/src/Admin/MedBundle/Resources/views/Plangestion/show.html.twig
@@ -67,7 +67,7 @@
                             {% endif %}
                         </td>
                         <td>
-                            {% if actividad.plang.autoevaluacion is null %} {% set termino = 0 %}
+                            {% if actividad.plang.autoevaluacion %} {% set termino = 0 %}
                             {% elseif actividad.autoevaluacion is not null %}
                                 <a data-toggle="modal"
                                    href="{{ path('actividadplang_borrar', { 'id': actividad.id }) }}"
