fix terna de pares form

--- a/src/Admin/UnadBundle/Resources/views/Docente/show.html.twig
+++ b/src/Admin/UnadBundle/Resources/views/Docente/show.html.twig
@@ -71,7 +71,7 @@
             <tr>
                 <th>Autoevaluación
                 </th>
-                <td>Descrición del avance y cargue de evidencias</td>
+                <td>Descripción del avance y cargue de evidencias</td>
                 <td>
                     {% if entity.plangestion %}
                         {% if instrumentos[1].estado %}
@@ -153,7 +153,7 @@
                 </th>
                 <td>Evaluación de la terna a los pares acádemicos</td>
                 <td>
-                    {% if instrumentos[5].estado %}
+                    {% if instrumentos[6].estado %}
                         <a href="{{ path('docente_coevalpares') }}" class="btn btn-primary btn-xs">Ingresar <i
                                     class="fa fa-sign-in"></i></a>
                     {% endif %}
