--- a/src/Admin/MedBundle/Resources/views/Plangestion/edit.html.twig
+++ b/src/Admin/MedBundle/Resources/views/Plangestion/edit.html.twig
@@ -21,4 +21,5 @@
                 {{ form_widget(edit_form._token) }}
                 </table>
                 </form>
+                </div>
 		{% endblock %}
