fix form js function

--- a/src/Admin/MedBundle/Resources/views/Actividadrol/select.html.twig
+++ b/src/Admin/MedBundle/Resources/views/Actividadrol/select.html.twig
@@ -147,8 +147,8 @@ Consulta listado de Actividades por Rol (Predeterminadas)
         
         <script>
 function calculo() {
-  var horas = document.getElementById('admin_medbundle_rolplang_horas');
-  var semanas = document.getElementById('admin_medbundle_rolplang_semanas');
+  var horas = document.getElementById('rolplang_horas');
+  var semanas = document.getElementById('rolplang_semanas');
   $('#porperiodo').text(horas.value+' horas para '+semanas.value+' semanas corresponden a '+(horas.value/semanas.value).toFixed(1)+' horas por semana.');
     }
     </script>
