link informe final archivo

--- a/src/Admin/MedBundle/Resources/views/Archivo/pordoc.html.twig
+++ b/src/Admin/MedBundle/Resources/views/Archivo/pordoc.html.twig
@@ -33,7 +33,7 @@
                 <td>{{ entity.periodo }}</td>
                 <td>{{ entity.final|number_format(1, '.', ',') }}</td>
                 <td>
-                    <a href="javascript:popUp('/archivo/{{entity.periodo}}/informe/{{entity.cedula}}-{{entity.periodo}}.pdf')" class="btn btn-primary btn-xs"><i class="fa fa-file"></i></a>
+                    <a href="javascript:popUp('{{ path('docente_final', {'id': entity.id }) }}')" class="btn btn-primary btn-xs">Ver... <i class="fa fa-sign-in"></i></a>
                 </td>
             </tr>
         {% endfor %}
