--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -172,8 +172,8 @@
                 <a href="#"><i class="fa fa-lg fa-fw fa-bar-chart-o"></i> <span class="menu-item-parent">MED</span></a>
                 <ul style="display: block;">
                     <li>
-                        <a href="{{ path('home_user_inicio') }}">Periodo Actual</a>
-                        <a href="{{ path('archivo_docente') }}">Archivo</a>
+                        <a href="{{ path('home_user_inicio') }}">Periodo Vigente</a>
+                        <a href="{{ path('archivo_docente') }}">Periodos Anteriores</a>
                     </li>
                 </ul>
             </li>
