--- a/src/Admin/UserBundle/Resources/views/User/edit.html.twig
+++ b/src/Admin/UserBundle/Resources/views/User/edit.html.twig
@@ -6,8 +6,8 @@
         <div class="jarviswidget jarviswidget-color-blueDark" id="wid-id-0" data-widget-editbutton="false" data-widget-colorbutton="false" data-widget-deletebutton="false">
             <header>
                     <span class="widget-icon"> <i class="fa fa-table"></i> </span>
-                    <h2>Información del Usuario</h2>
-            </header>     
+                    <h2>Información del usuario</h2>
+            </header>
                 <!-- widget div-->
                 <div>
 
@@ -22,8 +22,8 @@
                 <div class="content">
                 <div class="widget-body no-padding" id="bodyform">
                 <div class="form_error">
-                </div> 
- <form action="{{ path('admin_user_update', { 'id': entity.id }) }}" method="post" {{ form_start(edit_form) }}
+                </div>
+ <form action="{{ path('admin_user_update', { 'id': entity.id }) }}" {{ form_start(edit_form) }}
             <table class="table table-bordered table-striped hidden-mobile" style="width: 80%">
    <input type="hidden" name="_method" value="PUT"/>
      {{ form_errors(edit_form) }}
@@ -48,9 +48,14 @@
     <td>{{ form_widget(edit_form.email) }}</td>
    </tr>
    <tr>
-    <td>Email Personal</td>
+    <td>Email personal</td>
     <td>{{ form_widget(edit_form.emailp) }}</td>
    </tr>
+    <tr>
+        <td>Password</td>
+        <td>{{ form_widget(edit_form.password) }}
+        </td>
+    </tr>
    <tr>
     <td>Estado</td>
     <td>Activo: {{ form_widget(edit_form.isActive) }}
@@ -63,7 +68,7 @@
    </tr>
    <tr>
     <td></td>
-    <td>    
+    <td>
     <button type="submit" class="btn btn-lg btn-primary">Guardar</button></td>
   </tr>
   {{ form_widget(edit_form._token) }}
@@ -76,9 +81,9 @@
 </div>
 <!-- end widget div -->
 </div>
-<!-- end widget -->                                                           
+<!-- end widget -->
 </article>
-                   
+
 
 
 <ul class="record_actions">
