--- a/src/Admin/MedBundle/Resources/views/Plangestion/info.html.twig
+++ b/src/Admin/MedBundle/Resources/views/Plangestion/info.html.twig
@@ -195,7 +195,7 @@
                     Plan de Gestión Firmado:
                 </td>
                 <td colspan="2">
-                    <a href="../../uploads/{{ docente.periodo }}{{ docente.plangestion.pdf.webpath }}"
+                    <a href="{{ path('_welcome') }}uploads/{{ docente.periodo }}{{ docente.plangestion.pdf.webpath }}"
                        target="_blank">
                         <img src="/img/pdf-icon.jpeg" alt="Descargar">
                     </a>
