--- a/src/Admin/UnadBundle/Resources/views/Docente/final.html.twig
+++ b/src/Admin/UnadBundle/Resources/views/Docente/final.html.twig
@@ -71,7 +71,7 @@
       <td class="titulo" colspan="8">EVALUACIÓN DE ESTUDIANTES</td>
   </tr>
   <tr>
-    <td>Competencia</td>  
+    <td>Competencia</td>
     <td class="centro">Cognitiva</td>
     <td class="centro">Comunicativa</td>
     <td class="centro">Metodológicas</td>
@@ -81,7 +81,7 @@
     <td class="centro">Promedio</td>
   </tr>
   <tr>
-       <td>Calificación</td> 
+       <td>Calificación</td>
       <td class="centro">{{(docente.heteroeval.competencia1)|number_format(1, '.', ',')}}</td>
     <td class="centro">{{(docente.heteroeval.competencia2)|number_format(1, '.', ',')}}</td>
     <td class="centro">{{(docente.heteroeval.competencia3)|number_format(1, '.', ',')}}</td>
@@ -154,7 +154,7 @@
   </tr>
   {%endif%}
 </table>
-       
+
 <table widtd="100%" border="0">
       <tr>
       <td class="titulo" colspan="3">CONSOLIDACIÓN FINAL</td>
@@ -167,7 +167,7 @@
   <tr>
     <td>Autoevaluación (A1)</td>
     <td>25%</td>
-    <td class="centro">{{(docente.evaluacion.auto*0.25)|number_format(2, '.', ',')}}</td>
+    <td class="centro">{{(docente.evaluacion.auto*0.25)|number_format(2, '.', ','): ''}}</td>
   </tr>
   <tr>
     <td>Heteroevaluación (H1)</td>
