--- a/src/Admin/UnadBundle/Resources/views/Docente/show.html.twig
+++ b/src/Admin/UnadBundle/Resources/views/Docente/show.html.twig
@@ -32,7 +32,7 @@
                         {% if instrumentos[0].estado %}
                             <a href="{{ path('plangestion_crear') }}" class="btn btn-primary btn-xs">Ingresar <i
                                         class="fa fa-sign-in"></i></a>
-                        {% else %}<i>Ajuste al cronograma: 11 al 24 de diciembre.</i>{% endif %}
+                        {% else %}<i>Cronograma: 3 al 10 de junio.</i>{% endif %}
                     {% endif %}
                 </td>
                 <td>
@@ -77,7 +77,7 @@
                         {% if instrumentos[1].estado %}
                             <a href="{{ path('plangestion_show', { 'id': entity.plangestion.id }) }}"
                                class="btn btn-primary btn-xs">Ingresar <i class="fa fa-sign-in"></i></a>
-                        {% else %}<i>Ajuste al cronograma: 11 al 24 de diciembre.</i>{% endif %}
+                        {% else %}<i>Cronograma: 3 al 10 de junio.</i>{% endif %}
                     {% endif %}
                 </td>
                 <td>
@@ -98,7 +98,7 @@
                         {% if instrumentos[1].estado %}
                             <a href="{{ path('plangestion_conf', { 'id': entity.id }) }}"
                                class="btn btn-primary btn-xs">Ingresar <i class="fa fa-sign-in"></i></a>
-                        {% else %}<i>Ajuste al cronograma: 11 al 24 de diciembre.</i>{% endif %}
+                        {% else %}<i>Cronograma: 3 al 10 de junio.</i>{% endif %}
                 </td>
 
             </tr>
@@ -311,4 +311,3 @@
     </script>
 
 {% endblock %}
-   
