--- a/src/Admin/MedBundle/Resources/views/Plangestion/info.html.twig
+++ b/src/Admin/MedBundle/Resources/views/Plangestion/info.html.twig
@@ -196,7 +196,7 @@
                 </td>
                 <td colspan="2">
                     <a href="{{ path('_welcome') }}uploads/{{ docente.periodo }}{{ docente.plangestion.pdf.webpath }}"
-                       target="_blank">
+                       target="_blank" download>
                         <img src="/img/pdf-icon.jpeg" alt="Descargar">
                     </a>
                 </td>
